@@ -1,5 +1,8 @@
 2007-12-10  Andreas Kirschbaum
 
+	* Make sure all text in the command input field is visible.
+	(default)
+
 	* Move inventory and status dialogs to not overlap. (ragnorok)
 
 2007-12-09  Andreas Kirschbaum
